--- a/analise_dados_enem2016.ipynb
+++ b/analise_dados_enem2016.ipynb
@@ -959,7 +959,6 @@
     "- Xgboost\n",
     "- Rede neural artificial, especificamente uma MLP\n",
     "- Regressão linear \n",
-    "- Classificador aleatório para fins de comparação de performance\n",
     "\n",
     "Utilizando as seguintes variáveis nos modelos a priori:"
    ]
@@ -980,6 +979,46 @@
    "source": [
     "print(variaveis_modelo)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Update: o desafio foi solucionado apenas usando o método XGboost sem otimização de parâmetros. Devido ao tempo, as demais abordagens não foram exploradas. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variáveis usadas na solução final:\n",
+      "\n",
+      "['NU_INSCRICAO', 'NU_NOTA_CN', 'NU_NOTA_CH', 'NU_NOTA_LC', 'NU_NOTA_REDACAO', 'CO_UF_RESIDENCIA', 'NU_IDADE', 'TP_COR_RACA', 'TP_ESCOLA', 'TP_ANO_CONCLUIU', 'Q001', 'Q002', 'Q006', 'Q024', 'Q025', 'Q026', 'Q027', 'Q047', 'TP_PRESENCA_LC', 'NU_NOTA_MT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "variaveis_usadas = ['NU_INSCRICAO', 'NU_NOTA_CN', 'NU_NOTA_CH', 'NU_NOTA_LC', \n",
+    "                    'NU_NOTA_REDACAO', 'CO_UF_RESIDENCIA', 'NU_IDADE', \n",
+    "                    'TP_COR_RACA', 'TP_ESCOLA', 'TP_ANO_CONCLUIU', \n",
+    "                    'Q001', 'Q002', 'Q006', 'Q024', 'Q025', 'Q026', \n",
+    "                    'Q027', 'Q047', 'TP_PRESENCA_LC', 'NU_NOTA_MT']\n",
+    "\n",
+    "print(\"Variáveis usadas na solução final:\\n\")\n",
+    "print(variaveis_usadas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
